# swarmops

./: .env.example  .gitignore  DEPLOY.md  HACKATHON.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  _ci.txt  _wf.txt  docker-compose.yml  run_test.py  start-all.bat  start-backend.bat  start-docker.bat  start-frontend.bat  test_playwright_e2e.py
.github/workflows/: ci.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
PRDs/: 01-autonomous-devops-swarm-implementation-plan.md  01-autonomous-devops-swarm.md  02-swarmops-team-plan.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  _ai.txt  _pq.txt  _tui_snip.txt  config.py  database.py  main.py  models.py  perf_test.py  pyproject.toml  requirements.txt  run.bat  swarm.py  test_e2e.py
backend/agents/: base.py  code_writer.py  file_resolver.py  orchestrator.py  planner.py  pr_opener.py  security_auditor.py  test_runner.py
backend/api/: issues.py  prs.py  runs.py  stream.py
backend/app/: main.py
backend/app/api/routes/: health.py  runs.py  stream.py
backend/app/core/: config.py  store.py
backend/app/schemas/: agent_event.py  issue.py  run.py
backend/app/services/: swarm.py
backend/services/: github.py  llm.py
backend/tests/: test_api.py  test_store.py  test_swarmops_api.py
frontend/: Dockerfile  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useAgentStream.ts
frontend/services/: agent.service.ts  analysis.service.ts  swarm.service.ts
frontend/src/: App.tsx  Layout.tsx  (+1 more)
(+51 files in other folders)
